converted css to scss, added postcss and purgecss as cleanup tools

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -21,7 +21,7 @@
           href="{% static 'css/main.css' %}">
 
     <script defer
-            src="{% static 'js/main.js' %}"></script>
+            src="{% static 'scripts/main.js' %}"></script>
 
     <script src="https://kit.fontawesome.com/909e65141d.js"
             crossorigin="anonymous"></script>
